# lazyjj

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/: pull_request_template.md
.github/workflows/: main.yml  publish.yml  test.yml  winget.yml
docs/: keybindings.md
src/: app.rs  env.rs  event.rs  main.rs
src/commander/: bookmarks.rs  branches.rs  files.rs  ids.rs  jj.rs  log.rs  mod.rs
src/commander/snapshots/: lazyjj__commander__bookmarks__tests__get_bookmark_show.snap  lazyjj__commander__branches__tests__get_branch_show.snap  lazyjj__commander__files__tests__get_file_diff-2.snap  lazyjj__commander__files__tests__get_file_diff-3.snap  lazyjj__commander__files__tests__get_file_diff-4.snap  lazyjj__commander__files__tests__get_file_diff-5.snap  lazyjj__commander__files__tests__get_file_diff-6.snap  lazyjj__commander__files__tests__get_file_diff-7.snap  lazyjj__commander__files__tests__get_file_diff-8.snap  lazyjj__commander__files__tests__get_file_diff.snap  lazyjj__commander__log__tests__get_commit_show.snap  lazyjj__commander__log__tests__get_log.snap
src/keybinds/: config.rs  files_tab.rs  keybinds_store.rs  log_tab.rs  mod.rs  rebase_popup.rs
src/ui/: bookmark_set_popup.rs  bookmarks_tab.rs  branch_set_popup.rs  branches.rs  branches_tab.rs  command_log.rs  command_log_tab.rs  command_popup.rs  details_panel.rs  files.rs  files_tab.rs  help_popup.rs  loader_popup.rs  log.rs  log_tab.rs  message_popup.rs  mod.rs  rebase_popup.rs  scrollbar.rs  styles.rs  utils.rs
src/ui/panel/: details_panel.rs  log_panel.rs  mod.rs
