[package]
name = "lazyjj"
description = "TUI for Jujutsu/jj"
version = "0.2.1"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Cretezy/lazyjj"
authors = ["Charles Crete <charles@cretezy.com>"]


[package.metadata.binstall]
# `cargo binstall` gets confused by the `v` before versions in archive name.
pkg-url = "{ repo }/releases/download/v{ version }/lazyjj-v{ version }-{ target }.{ archive-format }"


[dependencies]
ansi-to-tui = "4.0.1"
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["derive"] }
crossterm = "0.27.0"
insta = { version = "1.39.0", features = ["filters"] }
itertools = "0.13.0"
lazy_static = "1.4.0"
ratatui = { version = "0.26.3", features = [
  "serde",
  "unstable-rendered-line-info",
] }
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }
tempdir = "0.3.7"
thiserror = "1.0.61"
toml = "0.8.14"
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-chrome = "0.7.2"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.18"
tui-textarea = "0.4.0"
tui_confirm_dialog = "0.2.1"
