[package]
name = "lazyjj"
description = "TUI for Jujutsu/jj"
version = "0.5.0"
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Cretezy/lazyjj"
authors = ["Charles Crete <charles@cretezy.com>"]


[package.metadata.binstall]
# `cargo binstall` gets confused by the `v` before versions in archive name.
pkg-url = "{ repo }/releases/download/v{ version }/lazyjj-v{ version }-{ target }.{ archive-format }"


[dependencies]
ansi-to-tui = { git = "https://github.com/Cretezy/ansi-to-tui.git", rev = "74bd97e" }
anyhow = "1.0.95"
chrono = "0.4.39"
clap = { version = "4.5.31", features = ["derive", "env"] }
insta = { version = "1.42.1", features = ["filters"] }
itertools = "0.14.0"
ratatui = { version = "0.29.0", features = [
  "serde",
  "unstable-rendered-line-info",
] }
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_with = "3.12.0"
shell-words = "1.1.0"
tempdir = "0.3.7"
thiserror = "2.0.11"
toml = "0.8.19"
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-chrome = "0.7.2"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.19"
tui-textarea = "0.7.0"
tui_confirm_dialog = "0.3.1"

# Release build optimize size.
# Run strip manually after build to reduce further.
[profile.release]
lto = true
opt-level = 's'     # Optimize for size.
codegen-units = 1
strip = "symbols"
